# sct-reader

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: build-and-test.yml  tagged-release.yml
src/: colour.rs  lib.rs
src/loaders/: mod.rs
src/loaders/ese/: mod.rs  partial.rs  reader.rs
src/loaders/euroscope/: asr.rs  colour.rs  error.rs  line.rs  loader.rs  mod.rs  position.rs  reader.rs  sector.rs  symbology.rs  waypoint.rs
src/loaders/euroscope/partial/: mod.rs  region.rs  sector_info.rs
src/loaders/vnas_crc/: eram.rs  facility.rs  mod.rs  stars.rs  tower.rs
src/package/: display.rs  facility.rs  map.rs  mod.rs  position.rs  symbol.rs
src/tests/: mod.rs
