[package]
name = "sct-reader"
version = "0.2.0"
edition = "2021"
authors = ["Caspian Merlin <chpmerlin@gmail.com>", "Prithvisagar Shivaraman <prithvisagar.shivaraman@gmail.com"]
description = "A Rust crate for deserialising sector files used by online ATC clients such as EuroScope and VRC and converting them to a common format"
repository = "https://github.com/azimuth-radar/sct-reader"
homepage = "https://github.com/azimuth-radar/sct-reader"
license = "BSD-3-Clause"
keywords = ["flightsim", "vatsim", "flight_simulation", "sector_file"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
aviation_calc_util = "2.12.1"
directories = "5.0.1"
