[package]
name = "sct-reader"
version = "0.5.0"
edition = "2021"
authors = ["Caspian Merlin <chpmerlin@gmail.com>", "Prithvi Shivaraman <git.prithvi@slogin.shivaraman.net"]
description = "A Rust crate for deserialising sector files used by online ATC clients such as EuroScope and VRC and converting them to a common format"
repository = "https://github.com/azimuth-radar/sct-reader"
homepage = "https://github.com/azimuth-radar/sct-reader"
license = "BSD-3-Clause"
keywords = ["flightsim", "vatsim", "flight_simulation", "sector_file"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
aviation_calc_util = "2.13.2"
directories = "6.0.0"
flate2 = "1.0.35"
geojson = "0.24.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
tar = "0.4.43"
uuid = {version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
